kubernetes/apps/kopiur-system/kopiur/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopiur
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames:
    - kopiur.rodent.cc
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: kopiur
          namespace: kopiur-system
          port: 51515
      matches:
        - path:
            type: PathPrefix
            value: /
